--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -4,14 +4,9 @@
   padding: 0 2rem;
 }
 
-.logo {
-  margin-top: 4.972rem;
-  margin-bottom: 4.051rem;
-}
-
 .button {
   margin-top: 4rem;
-  color: var(--hightlight);
+  color: var(--highlight);
   font-weight: 600;
   border: 0;
   background: transparent;
@@ -68,5 +63,5 @@
         }
       }
     }
-  }  
+  } 
 }
