--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,91 @@
-// TODO
+.container {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.banner {
+  img {
+    width: 100%;
+    height: 25rem;
+    object-fit: cover;
+    margin-bottom: 5rem;
+  }
+}
+
+.post {
+  .postContent {
+    h1 {
+      font-size: 3rem;
+      letter-spacing: -0.5px;
+      font-weight: bold;
+    }
+
+    .infoContainer {
+      display: flex;
+      margin-top: 1.5rem;
+
+      div {
+        display: flex;
+
+        time, span, svg {
+          color: var(--info);
+          font-size: 0.875rem;
+          line-height: 1.063rem;
+        }
+
+        svg {
+          margin-right: 0.5rem;
+        }
+
+        & + div {
+          margin-left: 1.5rem;
+        }
+      }
+    }
+
+    .content {
+      margin-top: 4rem;
+      
+
+      strong {
+        font-size: 2.25rem;
+        font-weight: bold;
+        line-height: 3.15rem;
+        text-align: justify;
+        color: var(--heading);
+      }
+
+      div {
+        font-weight: 400;
+        font-size: 1.125rem !important;
+        text-align: justify;
+        line-height: 1.575rem;
+        color: var(--body);
+
+        strong {
+          font-size: 1.125rem;
+          font-weight: 400;
+          text-align: justify;
+          line-height: 1.575rem;
+        }
+
+        a {
+          color: var(--highlight);
+        }
+
+        p, ul {
+          margin: 1.5rem 0;
+        }
+  
+        ul {
+          padding-left: 1.5rem;
+          
+          li {
+            margin: 0.5rem 0;
+          }
+        }
+      }
+    }
+  }
+}
