--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -13,6 +13,14 @@
   }
 }
 
+.updatePost {
+  position: absolute;
+  padding-top: 0.5rem;
+  font-style: italic;
+  font-weight: normal;
+  color: #bbbbbb;
+}
+
 .post {
   .postContent {
     h1 {
@@ -28,7 +36,9 @@
       div {
         display: flex;
 
-        time, span, svg {
+        time,
+        span,
+        svg {
           color: var(--info);
           font-size: 0.875rem;
           line-height: 1.063rem;
@@ -46,7 +56,6 @@
 
     .content {
       margin-top: 4rem;
-      
 
       strong {
         font-size: 2.25rem;
@@ -74,13 +83,14 @@
           color: var(--highlight);
         }
 
-        p, ul {
+        p,
+        ul {
           margin: 1.5rem 0;
         }
-  
+
         ul {
           padding-left: 1.5rem;
-          
+
           li {
             margin: 0.5rem 0;
           }
